--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="css/freeboard.min.css" rel="stylesheet" />
     <script src="js/freeboard.thirdparty.min.js"></script>
     <script type="text/javascript">
-        head.js("js/freeboard_plugins.min.js",
+        head.js(
+            "js/freeboard_plugins.min.js",
+        "js/freeboardRandomDataSource.js",
                 // *** Load more plugins here ***
                 function(){
                     $(function()
