Feat: IoT Actuator widget plugin 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         head.js(
             "js/freeboard_plugins.min.js",
         "js/freeboardRandomDataSource.js",
+        'plugins/iotwidget/actuator.js',
                 // *** Load more plugins here ***
                 function(){
                     $(function()
