Feat: IoT Switch widget plugin 추가

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             "js/freeboard_plugins.min.js",
         "js/freeboardRandomDataSource.js",
         'plugins/iotwidget/actuator.js',
+        'plugins/iotwidget/switch.js',
                 // *** Load more plugins here ***
                 function(){
                     $(function()
