Feat: IoT Time series highcharts widget plugin 추가

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         "js/freeboardRandomDataSource.js",
         'plugins/iotwidget/actuator.js',
         'plugins/iotwidget/switch.js',
+        'plugins/iotwidget/highcharts.js',
                 // *** Load more plugins here ***
                 function(){
                     $(function()
