Chore: freeboard 서버 환경 설정

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         'plugins/iotwidget/actuator.js',
         'plugins/iotwidget/switch.js',
         'plugins/iotwidget/highcharts.js',
+        'src/onem2m.freeboard.connector.js',
                 // *** Load more plugins here ***
                 function(){
                     $(function()
