--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         'plugins/iotwidget/actuator.js',
         'plugins/iotwidget/switch.js',
         'plugins/iotwidget/highcharts.js',
+        'plugins/iotwidget/horizontal_linear_gauge.js',
                 // *** Load more plugins here ***
                 function(){
                     $(function()
